<resources>
    <string name="app_name">HeadsUp</string>
    <string name="title_activity_home_activtity">HomeActivtity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="career">Career</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="placeholder">Placeholder String Value</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
</resources>
