<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:actionViewClass="android.widget.SearchView"
        android:title="" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_career"
            android:icon="@android:drawable/btn_star"
            android:title="@string/career" />
        <item
            android:id="@+id/nav_completed"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/completed_tasks" />
        <item
            android:id="@+id/nav_timeline"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="Timeline" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
